bug fix for nav menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -163,3 +163,9 @@ html {
         margin: 0 0.5rem 0 0.5rem;
     }
 }
+
+@media (hover: hover) {
+    .main-nav a:hover {
+        color: #ffcc00;
+    }
+}
